# nsis-tauri-utils

./: .gitignore  Cargo.toml  README.md  SemverCompare.cpp  SemverCompare.nsi  SemverCompare.sln  SemverCompare.vcxproj  SemverCompare.vcxproj.filters  buildDebug.ps1  buildRelease.ps1  demo.nsi
.cargo/: config.toml
.changes/: config.json  download-progressbar.md  initial-releas.md  process-currentuser.md  readme.md  skip-host-process.md  static-crt.md
.github/workflows/: audit.yml  change-status-on-pr.yml  clippy-fmt.yml  covector-version-or-publish.yml  test.yml
.scripts/: package-latest-version.js
crates/nsis-download/: CHANGELOG.md  Cargo.toml
crates/nsis-download/src/: lib.rs
crates/nsis-process/: CHANGELOG.md  Cargo.toml
crates/nsis-process/src/: lib.rs
crates/nsis-semvercompare/: CHANGELOG.md  Cargo.toml
crates/nsis-semvercompare/src/: lib.rs
crates/nsis-tauri-utils/: CHANGELOG.md  Cargo.toml
crates/pluginapi/: Cargo.toml
crates/pluginapi/src/: lib.rs
include/: semver.hpp
include/nsis/: api.h  nsis_tchar.h  pluginapi.h
nsis-download/: Cargo.toml
nsis-download/src/: lib.rs
nsis-process/: Cargo.toml
nsis-process/src/: lib.rs
nsis-semvercompare/: Cargo.toml
nsis-semvercompare/src/: lib.rs
nsis-tauri/: Cargo.toml
nsis-tauri-utils/: Cargo.toml
nsis-tauri/src/: lib.rs
nsis-utils/: Cargo.toml
nsis-utils/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs  utils.rs
