[package]
name = "nsis-semvercompare"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"

[dependencies]
semver = "1.0.16"

[dependencies.windows-sys]
version = "0.42.0"
features = ["Win32_System_Memory", "Win32_Foundation", "Win32_Globalization"]
