[workspace]
members = [
    "nsis-utils", "nsis-semvercompare", "nsis-process", "nsis-download"
]
resolver = "2"

[workspace.dependencies.windows-sys]
version = "0.42.0"
features = ["Win32_Foundation", "Win32_Globalization", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory", "Win32_System_Threading"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"