[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
authors = ["Tauri Programme within the Commons Conservancy"]
edition = "2021"
license = "MIT or Apache-2.0"

[workspace.dependencies.windows-sys]
version = "0.45.0"
features = ["Win32_Foundation", "Win32_Globalization", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory", "Win32_System_Threading"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"