[package]
name = "nsis-download"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
nsis-utils = { path = "../nsis-utils" }
windows-sys.workspace = true

ureq = { version = "2", default-features = false, features = ["tls"] }
