[package]
name = "nsis-process"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nsis-utils = { path = "../nsis-utils" }
windows-sys.workspace = true
