[package]
name = "nsis-tauri"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nsis-utils = { path = "../nsis-utils" }
nsis-download = { path = "../nsis-download", default-features = false }
nsis-process = { path = "../nsis-process", default-features = false }
nsis-semvercompare = { path = "../nsis-semvercompare", default-features = false }
windows-sys.workspace = true
