[package]
name = "nsis-tauri"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nsis-utils = { path = "../nsis-utils" }
nsis-download = { path = "../nsis-download", default-features = true }
nsis-process = { path = "../nsis-process", default-features = true }
nsis-semvercompare = { path = "../nsis-semvercompare", default-features = true }
windows-sys.workspace = true
