[package]
name = "nsis-download"
version = "0.3.0"

  [package.authors]
  workspace = true

  [package.edition]
  workspace = true

  [package.license]
  workspace = true

[lib]
crate-type = [ "rlib", "cdylib" ]

[dependencies]
ureq = { version = "2", default-features = false, features = [ "tls" ] }
progress-streams = "1.1"

  [dependencies.pluginapi]
  workspace = true

  [dependencies.windows-sys]
  workspace = true
