[package]
name = "nsis-download"
version = "0.3.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ureq = { version = "2", default-features = false, features = ["tls"] }
progress-streams = "1.1"
pluginapi = { workspace = true }
windows-sys = { workspace = true }
