[package]
name = "nsis-semvercompare"
version = "0.1.0"

  [package.authors]
  workspace = true

  [package.edition]
  workspace = true

  [package.license]
  workspace = true

[lib]
crate-type = [ "rlib", "cdylib" ]

[dependencies]
pluginapi = { path = "../pluginapi" }
semver = "1.0.16"

  [dependencies.windows-sys]
  workspace = true
