[package]
name = "nsis-semvercompare"
version = "0.1.0"

  [package.authors]
  workspace = true

  [package.edition]
  workspace = true

  [package.license]
  workspace = true

[lib]
crate-type = [ "rlib", "cdylib" ]

[dependencies]
pluginapi.workspace = true
semver = "1.0.18"

  [dependencies.windows-sys]
  workspace = true
