[package]
name = "nsis-tauri-utils"
version = "0.1.1"

  [package.authors]
  workspace = true

  [package.edition]
  workspace = true

  [package.license]
  workspace = true

[lib]
crate-type = [ "cdylib" ]

[dependencies]
nsis-download = { path = "../nsis-download" }
nsis-process = { path = "../nsis-process" }
nsis-semvercompare = { path = "../nsis-semvercompare" }
